--- a/templates/client.html
+++ b/templates/client.html
@@ -8,8 +8,16 @@
     <script src="assets/js/vendor/jquery/jquery.js" type="text/javascript"></script>
     <script src="assets/js/vendor/underscore/underscore.js" type="text/javascript"></script>
     <script src="assets/js/vendor/angular/angular.js" type="text/javascript"></script>
-    <script src="assets/js/app.js"></script>
+    <script src="assets/js/vendor/angular-resource/angular-resource.js" type="text/javascript"></script>
+    <script src="assets/js/client.js"></script>
 </head>
-    <body>
+    <body ng-app="yourFace" ng-controller="yourFaceController">
+        <ul ng-repeat="person in people">
+            <li class="yf-person">
+                {$ person.id $}
+                {$ person.firstname $}
+                {$ person.lastname $}
+            </li>
+        </ul>
     </body>
 </html>
