Add some base styling

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -1,3 +1,33 @@
 //
 // Face Thing
 //
+
+@import 'vendor/lesshat.less';
+
+html, body {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    background-image: url('../img/simple-dashed.png');
+}
+
+.yf-people,
+.yf-person {
+    .size(100%);
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.yf-people {
+    background: orange;
+}
+
+.yf-person {
+    background: red;
+}
