--- a/templates/client.html
+++ b/templates/client.html
@@ -12,7 +12,7 @@
     <script src="assets/js/client.js"></script>
 </head>
     <body ng-app="yourFace" ng-controller="yourFaceController">
-        <ul ng-repeat="person in people">
+        <ul class="yf-people" ng-repeat="person in people">
             <li class="yf-person">
                 {$ person.id $}
                 {$ person.firstname $}
