Add font-awesome + more meta

--- a/templates/client.html
+++ b/templates/client.html
@@ -19,6 +19,15 @@
                 <div class="yf-person-meta">
                     <h2 class="yf-person-name" data-fittext=".5">{$ person.firstname $}</h2>
                     <h2 class="yf-person-name" data-fittext=".5">{$ person.lastname $}</h2>
+                    <h3 class="yf-person-title" data-fittext="1.4">{$ person.title $}</h3>
+                    <div class="yf-person-socials" data-fittext="1.9">
+                        <span class="yf-person-social" >
+                            <i class="fa fa-twitter"></i> {$ person.twitter $}
+                        </span> 
+                        <span class="yf-person-social">
+                            <i class="fa fa-github"></i> {$ person.github $}
+                        </span>
+                    </div>
                 </div>
             </li>
         </ul>
