--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -3,6 +3,7 @@
 //
 
 @import 'vendor/lesshat.less';
+@import 'vendor/font-awesome/font-awesome.less';
 
 @font-face {
     font-family: 'Open Sans';
@@ -21,6 +22,7 @@
 html, body {
     height: 100%;
     font-family: 'Open Sans';
+    color: #fff;
     padding: 0;
     margin: 0;
 }
@@ -57,9 +59,28 @@ body {
 
 .yf-person-name {
     color: #fff;
-    // font-size: 200px;
+    font-size: 200px;
     font-weight: 900;
     text-transform: uppercase;
     line-height: 1;
     margin: 0;
+}
+
+.yf-person-title {
+    color: #f2f2f2;
+    font-family: Lobster;
+    font-size: 100px;
+    font-weight: 600;
+    line-height: 1;
+    margin: 0;
+    margin-top: 20px;
+}
+
+.yf-person-socials {
+    margin-top: 20px;
+    font-size: 50px;
+}
+
+.yf-person-social {
+    margin-right: 30px;
 }
