--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -31,20 +31,27 @@ body {
     background-image: url('../img/simple-dashed.png');
 }
 
+.rn-carousel-container,
 .yf-people,
 .yf-person {
     .size(100%);
     padding: 0;
     margin: 0;
+}
+
+.yf-people {
     position: absolute;
     top: 0;
     left: 0;
 }
+
 .yf-person-picture {
-    width: 50%;
-    height: 100%;
-    object-fit: cover;
+    .size(50%, 100%);
     position: absolute;
+    img {
+        .size(100%);
+        object-fit: cover;
+    }
 }
 
 .yf-person-meta {
