--- a/templates/client.html
+++ b/templates/client.html
@@ -4,20 +4,25 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <title>People &middot; PyCon Canada 2014</title>
     <link rel="icon" type="image/png" href="assets/favicon.ico" />
+     <link rel="stylesheet" type="text/css" href="assets/js/vendor/angular-carousel/angular-carousel.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     <script src="assets/js/vendor/jquery/jquery.js" type="text/javascript"></script>
     <script src="assets/js/vendor/underscore/underscore.js" type="text/javascript"></script>
     <script src="assets/js/vendor/angular/angular.js" type="text/javascript"></script>
     <script src="assets/js/vendor/angular-resource/angular-resource.js" type="text/javascript"></script>
+    <script src="assets/js/vendor/angular-touch/angular-touch.js" type="text/javascript"></script>
+    <script src="assets/js/vendor/angular-carousel/angular-carousel.js" type="text/javascript"></script>
     <script src="assets/js/vendor/ng-FitText.js/ng-FitText.js" type="text/javascript"></script>
     <script src="assets/js/client.js"></script>
 </head>
     <body ng-app="yourFace" ng-controller="yourFaceController">
-        <ul class="yf-people" ng-repeat="person in people | limitTo: 1">
-            <li class="yf-person">
-                <img class="yf-person-picture" src="assets/pictures/{$ person.picture $}" alt="{$ person.firstname $} {$ person.lastname $}" />
+        <ul rn-carousel class="yf-people">
+            <li class="yf-person" ng-repeat="person in people">
+                <div class="yf-person-picture">
+                    <img src="assets/pictures/{$ person.picture || 'anonymoose.jpg' $}" alt="{$ person.firstname $} {$ person.lastname $}" />
+                </div>
                 <div class="yf-person-meta">
-                    <h2 class="yf-person-name" data-fittext=".5">{$ person.firstname $}</h2>
+                    <h2 class="yf-person-name" data-fittext=".6">{$ person.firstname $}</h2>
                     <h2 class="yf-person-name" data-fittext=".5">{$ person.lastname $}</h2>
                     <h3 class="yf-person-title" data-fittext="1.4">{$ person.title $}</h3>
                     <div class="yf-person-socials" data-fittext="1.9">
