--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1372,6 +1372,9 @@ body {
   top: 0;
   left: 0;
 }
+.yf-person {
+  position: relative;
+}
 .yf-person-picture {
   width: 50%;
   height: 100%;
@@ -1382,10 +1385,20 @@ body {
   height: 100%;
   object-fit: cover;
 }
+.yf-person:nth-child(even) .yf-person-picture {
+  right: 0;
+}
 .yf-person-meta {
   margin-top: 5%;
   margin-left: 50%;
   padding-left: 40px;
+}
+.yf-person:nth-child(even) .yf-person-meta {
+  text-align: right;
+  margin-left: auto;
+  margin-right: 50%;
+  padding-left: auto;
+  padding-right: 40px;
 }
 .yf-person-names {
   width: 100%;
