--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -54,8 +54,7 @@ body {
 
 .yf-person {
     position: relative;
-    cursor: -webkit-grab;
-    cursor: -moz-grab;
+    cursor: none;
     .user-select(none);
     &:active {
         cursor: -webkit-grabbing;
