--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -65,6 +65,7 @@ body {
 .yf-person-picture {
     .size(50%, 100%);
     position: absolute;
+    box-shadow: 0 0 20px 5px #000;
     img {
         .size(100%);
         object-fit: cover;
