--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -42,7 +42,7 @@ body {
 
 .rn-carousel-container {
     background-image: url('../img/python.png');
-    .animation(background-move 200s linear infinite);
+    .animation(background-move 200s linear infinite alternate);
         
 }
 
