Add pause indicator

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -121,3 +121,10 @@ body {
 .yf-person-social {
     margin-right: 30px;
 }
+
+.yf-pause {
+    font-size: 30px;
+    position: fixed;
+    left: 20px;
+    bottom: 15px;
+}
